<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutNoInternet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:visibility="gone"
    android:padding="24dp"
    android:background="?attr/colorSurface">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_internet_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_internet_body"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textAlignment="center" />
        
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetryInternet"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/retry" />
</LinearLayout>
